--- a/01_Day_JavaScript_Refresher/index.html
+++ b/01_Day_JavaScript_Refresher/index.html
@@ -1,26 +1,11 @@
 <!DOCTYPE html>
-
 <html>
   <head>
-
-
-    <title>30DaysOfScript:Internal Script</title>
-    <script>
-      console.log('Welcome to 30DaysOfJavaScript')
-    </script>
-
-
+    <title>30DaysOfScript</title>
   </head>
-
-
-
-
-  <body>
-    <button onclick="alert('Welcome to 30DaysOfJavaScript!')">Click Me</button>
-  </body>
-
-
-
+ <body>
+    <script src="js/001.js"></script>
+ </body>
 
 </html>
 
