--- a/01_Day_JavaScript_Refresher/index.html
+++ b/01_Day_JavaScript_Refresher/index.html
@@ -4,7 +4,7 @@
     <title>30DaysOfScript</title>
   </head>
  <body>
-    <script src="js/001.js"></script>
+    <script src="js/arrays1.js"></script>
  </body>
 
 </html>
