out-put vars functions loops

--- a/01_Day_JavaScript_Refresher/index.html
+++ b/01_Day_JavaScript_Refresher/index.html
@@ -4,7 +4,13 @@
     <title>30DaysOfScript</title>
   </head>
  <body>
-    <script src="js/arrays1.js"></script>
+    <!--script src="js/arrays1.js"></script>
+    <script src="js/arrayIndex.js"></script>
+    <script src="js/arrayModify.js"></script>
+    <script src="js/arraySplit.js"></script>
+    <script src="js/arrayConcat.js"></script-->
+    <script src="js/arrayMethod.js"></script>
+
  </body>
 
 </html>
